--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
           />
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          I am a third year computer science major at UC Santa Cruz. I am 
-          passionate about web development and machine learning.
+          Passionate third year computer science student interested in software development. Looking for a role where I can learn from team members and grow my skill set.
         </p>
         </div>
       </div>
