--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
           />
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Passionate third year computer science student interested in software development. Looking for a role where I can learn from team members and grow my skill set.
+          Dedicated and results-driven software developer with experience designing and implementing complex software solutions.
+
         </p>
         </div>
       </div>
